resources/styles/app.css
/* ... */
.dish-card-content .dish-cover-image {
  grid-area: 1 / 1 / 2 / 2;
  width: 19rem;
}

@media (max-width: 768px) {
  .dish-card-content {
    width: 16rem;
  }

  .dish-card-content .dish-cover-image {
    height: 14rem;
    width: 16rem;
    object-fit: cover;
  }
}

.dish-card-content h1 {
  grid-area: 2 / 1 / 3 / 2;
  font-weight: 300;
}

.dish-card-content p {
  grid-area: 3 / 1 / 4 / 2;
  padding: 0 2rem;
}

.dish-card-content .types {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 0;
}

.dish-card-content .dish-info-icon {
  grid-area: 4 / 1 / 5 / 2;
  margin-right: 1.5rem;
}

.dish-card-content .dish-info-icon:last-child {
  margin-right: 0;
}

.dish-card-content .price {
  grid-area: 5 / 1 / 6 / 2;
}

.dish-card p {
  font-size: 1.2rem;
  margin: 0;
}

@media (max-width: 768px) {
  .dish-card p {
    font-size: 1.2rem;
  }
}

.all-dishes {
  float: right;
  margin-right: 3rem;
  font-size: 1.5rem;
  color: var(--black);
  text-decoration: none;
}

.dish-info-icon {
  margin: 2rem 0;
}

/* price with lines */
.price {
  overflow: hidden;
  text-align: center;
  margin: 0 1rem;
  padding-bottom: 2.5rem;
}
.price > span {
  position: relative;
  display: inline-block;
  font-weight: 300;
  font-size: 1.5rem;
}
.price > span:before,
.price > span:after {
  content: "";
  position: absolute;
  top: 50%;
  border-bottom: 1px solid var(--brown-grey);
  width: 100vw;
  margin: 0 20px;
}
.price > span:before {
  right: 100%;
}
.price > span:after {
  left: 100%;
}

/* Icon Definitions */

.icon-definitions {
  background-color: #fafafa;
  padding: 1rem 5rem;
  margin-top: 3rem;
}

@media (max-width: 768px) {
  .icon-definitions {
    padding: 1rem 0;
  }
}

.icon-definitions ul {
  list-style: none;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 2rem 10rem;
  padding: 0;
}

.icon-definitions ul li {
  margin: 0 2rem;
}

@media (max-width: 768px) {
  .icon-definitions ul li img {
    height: 2.5rem;
  }
}

/* Chef of the week  section*/

.chef-of-the-week {
  display: grid;
  grid-template-columns: 0.2fr 1fr 0.2fr;
  /* grid-template-rows: 0.2fr repeat(2, 1fr); */
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  margin: 4rem 0;
}

.chef-of-the-week .container .restaurants-list .restaurant-card {
  margin: 0.4rem;
  padding-bottom: 1rem;
}

@media (max-width: 768px) {
  .chef-of-the-week {
    display: block;
  }
}

.chef-of-the-week h1 {
  grid-area: 1 / 2 / 2 / 3;
  font-weight: 200;
  font-size: 1.8rem;
  margin-bottom: 3rem;
}

@media (max-width: 768px) {
  .chef-of-the-week h1 {
    font-size: medium;
  }
}

.chef-of-the-week .chef-image {
  position: relative;
  height: fit-content;
}

.chef-of-the-week .chef-name {
  background-color: rgba(255, 255, 255, 0.8);
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 1rem 0;
  margin-bottom: 0;
  font-weight: 300;
  font-size: xx-large;
}

.chef-info {
  grid-area: 2 / 2 / 3 / 3;
  display: flex;
  justify-content: space-between;
}

@media (max-width: 768px) {
  .chef-info {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: initial;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
  }

  .chef-image {
    margin: auto;
    grid-area: 1 / 1 / 2 / 2;
  }
}

.chef-info p {
  font-size: 1.1rem;
  font-weight: 200;
  text-align: justify;
  margin: 0 4rem;
  max-width: 33rem;
}

@media (max-width: 768px) {
  .chef-info p {
    text-align: center;
    grid-area: 1 / 1 / 2 / 2;
    grid-area: 2 / 1 / 3 / 2;
    margin: 1.5rem auto;
    width: 22rem;
  }
}

.chef-of-the-week .container {
  grid-area: 3 / 2 / 4 / 3;
  margin-top: 2rem;
}

.chef-of-the-week .container h2 {
  font-size: 1.75rem;
  font-weight: 200;
}

@media (max-width: 768px) {
  .chef-of-the-week .container {
    margin: 0 1rem;
  }

  .chef-of-the-week .container h2 {
    font-size: large;
  }
}

.chef-of-the-week .container .restaurants-list {
  list-style: none;
  display: flex;
  justify-content: flex-start;
  flex-direction: row;
  padding: 0;
}

.chef-of-the-week .restaurant-card img {
  height: 13rem;
  width: 14.4rem;
}

.chef-of-the-week .restaurant-card h1 {
  padding-bottom: 1rem;
  font-weight: 300;
  font-size: 1.8rem;
}

.chef-of-the-week .restaurant-card .restaurant-card-content {
  margin-top: 0.5rem;
}

@media (max-width: 768px) {
  .chef-of-the-week .restaurant-card .restaurant-card-content {
    margin: 0;
  }
  .chef-of-the-week .restaurant-card h1 {
    margin-bottom: 2rem;
  }
}

/* ABOUT US Section */

.about-us {
  background-color: #fafafa;
  padding: 3rem 0;
}

@media (max-width: 768px) {
  .about-us {
    padding: 0 1rem;
    text-align: center;
  }
}

.about-us .container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 0.2fr 0fr 0.4fr;
  grid-column-gap: 0;
  margin-left: 9rem;
  align-items: center;
}

@media (max-width: 768px) {
  .about-us .container {
    display: flex;
    flex-direction: column;
    margin: auto;
    padding: 0;
  }
}

.about-us .container h1 {
  grid-area: 1 / 1 / 2 / 3;
  font-size: xx-large;
  margin: 0;
}

.about-us .container .about-us-info {
  font-size: 1.3rem;
  margin: 0;
  grid-area: 2 / 1 / 3 / 2;
}

@media (max-width: 768px) {
  .about-us .container h1 {
    font-size: medium;
    margin-top: 2rem;
    margin-bottom: 0;
  }

  .about-us .container .about-us-info {
    font-size: medium;
    margin: 0;
  }
}

.about-us .container .about-us-brand {
  margin: 0 9rem;
  grid-area: 2 / 2 / 3 / 3;
}

.about-us .container .about-us-brand a {
  text-decoration: none;
  color: black;
  letter-spacing: 1rem;
}

.about-us .container .about-us-brand img {
  height: 9rem;
}

@media (max-width: 768px) {
  .about-us .container .about-us-brand img {
    height: 7rem;
  }

  .about-us .container .about-us-brand h2 {
    font-weight: 300;
    font-size: large;
  }
}

.about-us .about-us-buttons {
  display: flex;
  grid-area: 3 / 1 / 4 / 3;
}
/* ... */

